# clinicalops-scheduling-agent

./: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  sample.md
app/: __init__.py  main.py
app/agents/: __init__.py  provider.py  scheduling_agent.py  tools.py
app/api/: deps.py  route.py
app/api/v1/: router.py
app/api/v1/routes/: address.py  appointment.py  chat.py  health.py  (+7 more)
app/clients/: lifecycle.py  provider.py  registry.py
app/clients/internal/: appointment.py  availability_client.py  base.py  doctor_clinic.py  group.py  insurance.py  patient.py  patient_client.py  scheduling.py  scheduling_client.py
app/clients/redis/: redis_client.py
app/clients/vault/: vault_client.py
app/core/: config.py  context.py  envelope.py  exceptions.py  logging.py
app/middleware/: request_context.py  tenant.py
app/schemas/: base.py  chat.py  common.py  insurance.py  patient.py  scheduling.py  verification.py  webhook.py
app/services/: address_service.py  appointment_service.py  base.py  chat_service.py  doctor_clinic_service.py  insurance_service.py  patient_service.py  scheduling_service.py  slots_service.py  verification_service.py  webhook_service.py
app/services/nlu/: intents.py  llm.py
docs/superpowers/plans/: 2026-07-06-phase1-foundation.md  2026-07-06-phase2-doctor-clinic.md  2026-07-06-phase3-address.md  2026-07-06-phase4-slots.md  2026-07-06-phase5-patient-appointments.md  2026-07-06-phase6-insurance.md  2026-07-06-phase7-agent.md  2026-07-06-phase8-webhook.md  2026-07-06-phase9-phone-verification.md
tests/: conftest.py  test_health.py
(+1 files in other folders)
